# todo-list-phase1

./: README.md  example.env  pyproject.toml
tests/: test_manager.py
todolist/: manager.py  models.py
