[project]
name = "todo-list-app"
version = "0.1.0"
description = "A simple ToDo List application using Python OOP (In-Memory)."
authors = [
    {name = "MohammadReza",email = "mohammadrezadabbagh1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "todolist"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"